Make wallet an optional param in userData endpoint
So that you can query for the launchpad's total list of resulting items
